# wing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json  wing.toml
include/wing/: application.h  build.h  config.h  error.h  help.h  ninja.h  operations.h  project.h  template.h  tools.h
src/: application.cpp  build.cpp  config.cpp  help.cpp  main.cpp  ninja.cpp  operations.cpp  project.cpp  template.cpp  tools.cpp
